<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/call"
                android:onClick="callService"
                android:icon="@drawable/ic_phone"
                android:title="@string/menu_call" />
            <item
                android:id="@+id/nav_send"
                android:onClick="textService"
                android:icon="@drawable/ic_message"
                android:title="@string/menu_message" />
        </menu>
    </item>

</menu>
