<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="362dp"

        android:layout_height="160dp"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="344dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/Main_Service"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:text="@string/Service_1"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/Service_2"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:text="@string/Service_3"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/More_details"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/MainService"
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/ServiceOne"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/ServiceTwo"
                    android:layout_width="match_parent"
                    android:layout_height="31dp" />

                <TextView
                    android:id="@+id/ServiceThree"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/MoreDetails"
                    android:layout_width="match_parent"
                    android:layout_height="32dp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>