<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:weightSum="2"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="209dp"
        android:layout_height="222dp"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="222dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="69dp"
                android:layout_height="174dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:background="@color/colorPrimary"
                    android:text="The Name of Hospital :"
                    android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                    android:textSize="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:text="@string/Email"
                    android:background="@color/common_google_signin_btn_text_dark_pressed"
                    android:textSize="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/Phonenumber"
                    android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                    android:textSize="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/Location"
                    android:background="@color/common_google_signin_btn_text_dark_pressed"
                    android:textSize="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/More_details"
                    android:textColor="@color/common_google_signin_btn_text_dark_pressed"
                    android:textSize="8dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="173dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:background="@color/common_google_signin_btn_text_dark_pressed" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/common_google_signin_btn_text_dark_pressed" />

                <TextView
                    android:id="@+id/phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:onClick="PhoneNumber"
                    android:background="@color/common_google_signin_btn_text_dark_pressed" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/common_google_signin_btn_text_dark_pressed" />

                <TextView
                    android:id="@+id/more_details"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:width="31dp"
                    android:background="@color/common_google_signin_btn_text_dark_pressed" />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="95dp"
        android:layout_height="222dp"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/myImageS"
            android:background="@drawable/blue"
            android:layout_width="match_parent"
            android:layout_height="101dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/rate"
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="RATE " />

            <RatingBar
                android:id="@+id/ratingBar2"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="1.0"
                android:stepSize="0.5" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>